# rsocket-py

./: .coveragerc  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.md  LICENSE  README.md  clean.sh  pyproject.toml  python-package.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml  python-publish.yml
.junie/: guidelines.md
docs/: Makefile  api.rst  conf.py  extensions.rst  guide.rst  index.rst  make.bat  quickstart.rst  requirements.txt
docs/_static/: theme_override.css
examples/: client.py  client_quic.py  client_reconnect.py  client_rx.py  client_springboot.py  client_website_example.py  client_websocket.py  client_with_routing.py  client_wss.py  example_fixtures.py  fixtures.py  response_channel.py  response_stream.py  rsocket_in_aiohttp.py  run_against_example_java_server.py  sample_client.py  server.py  server_aiohttp_websocket.py  server_aiohttp_websocket_secure.py  server_fastapi_websocket.py  server_quart_websocket.py  server_quic.py  server_website_example.py  server_websocket.py  server_websockets.py  server_with_fragmenting.py  server_with_lease.py  server_with_routing.py  shared_tests.py  test_examples.py
examples/cli_demo_server/: server.py
examples/cloudevents/: client_cloudevents.py  server_cloudevents.py
examples/django_channels/: README.md  client_example.py  server_example.py
examples/graphql/: client_graphql.py  rsocket.graphqls  schema.py  server_graphql.py
examples/java/: pom.xml
examples/tutorial/: test_tutorials.py
performance/: conftest.py  performance_client.py  performance_server.py  sample_responses.py  test_performance.py
reactivesocket/: __init__.py  connection.py  frame.py  handlers.py  payload.py  reactivesocket.py
reactivestreams/: __init__.py  publisher.py  subscriber.py  subscription.py
reactivestreams/rx/: flowable.py
rsocket/: __init__.py  acksubscriber.py  async_helpers.py  composite_metadata.py  connection.py  datetime_helpers.py  disposable.py  empty_publisher.py  error_codes.py  exceptions.py  fragment.py  frame.py  frame_builders.py  frame_fragment_cache.py  frame_fragmenter.py  frame_helpers.py  frame_logger.py  frame_parser.py  handlers.py  helpers.py  lease.py  local_typing.py  logger.py  payload.py  queue_peekable.py  queue_response_stream.py  request_handler.py  response_stream_from_generator.py  rsocket.py  rsocket_base.py  rsocket_client.py  rsocket_interface.py  rsocket_internal.py  rsocket_resume.py  rsocket_server.py  stream_control.py  subscriberrequestchannel.py  subscriberrequeststream.py  timer.py  wellknown_mimetype.py
rsocket/awaitable/: awaitable_rsocket.py  collector_subscriber.py
rsocket/cli/: command.py
rsocket/cloudevents/: serialize.py
rsocket/extensions/: authentication.py  authentication_content.py  authentication_types.py  composite_metadata.py  composite_metadata_item.py  helpers.py  mimetype.py  mimetypes.py  routing.py  routing_request_handler.py  stream_data_mimetype.py  tagging.py
rsocket/graphql/: helpers.py  rsocket_transport.py  server_helper.py
rsocket/handlers/: __init__.py  error_stream.py  interfaces.py  request_cahnnel_common.py  request_cahnnel_requester.py  request_cahnnel_requester_responder.py  request_cahnnel_responder.py  request_channel_requester.py  request_response_requester.py  request_response_responder.py  request_stream_requester.py  request_stream_responder.py  stream.py  stream_handler.py
rsocket/load_balancer/: load_balancer_rsocket.py  load_balancer_strategy.py  random_client.py  round_robin.py
rsocket/reactivex/: back_pressure_publisher.py  from_rsocket_publisher.py  reactivex_channel.py  reactivex_client.py  reactivex_handler.py  reactivex_handler_adapter.py  subscriber_adapter.py
rsocket/resume/: resume_client.py  resume_interface.py  resume_registry.py  resume_session.py
rsocket/routing/: error_stream_handler.py  helpers.py  request_router.py  routing_request_handler.py
rsocket/rx_support/: back_pressure_publisher.py  back_pressure_subscriber.py  from_rsocket_publisher.py  rx_channel.py  rx_handler.py  rx_handler_adapter.py  rx_rsocket.py  rx_rsocket_client.py  rx_subscriber.py  subscriber_adapter.py
rsocket/streams/: backpressureapi.py  empty_stream.py  error_stream.py  exceptions.py  helpers.py  null_subscrier.py  stream_from_async_generator.py  stream_from_generator.py  stream_handler.py
rsocket/transports/: abstract_messaging.py  abstract_websocket.py  aiohttp_websocket.py  aioquic_transport.py  asyncwebsockets_transport.py  channels_transport.py  http3_transport.py  quart_websocket.py  tcp.py  transport.py  websocket.py  websockets_transport.py
tests/: conftest.py  test_tagging.py
tests/performance/: performance_client.py  performance_server.py  sample_responses.py  test_performance.py  test_request_response.py
tests/reactivesocket/: conftest.py  test_frame.py  test_reactivesocket.py
tests/reactivestreams/: test_reactivestreams.py
tests/rsocket/: conftest.py  helpers.py  misbehaving_rsocket.py  test_authentication.py  test_channel.py  test_cli_command.py  test_composite_metadata.py  test_concurrency.py  test_connection_lost.py  test_extentions.py  test_fire_and_forget.py  test_fragments.py  test_frame.py  test_frame_decode.py  test_helpers.py  test_internal.py  test_lease.py  test_load_balancer.py  test_metadata_push.py  test_mimetype.py  (+20 more)
(+178 files in other folders)
