[bdist_wheel]
universal = 0

[metadata]
license_file = LICENSE

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose
asyncio_mode = auto
timeout = 7

; Temporary disable filter warning until finding out why not all connections are closed on teardown, thus failing some tests
;filterwarnings =
;    error
;    ignore::DeprecationWarning
