[bdist_wheel]
universal = 0

[metadata]
license_file = LICENSE

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose
asyncio_mode = auto
timeout = 10

; TODO: Remove ignoring ResourceWarning after finding out why connection is not always closed after each test (rare event)
filterwarnings =
    error
    ignore::DeprecationWarning
    ignore::ResourceWarning
