[bdist_wheel]
universal = 0

[metadata]
name = rsocket
version = attr: rsocket.__version__
license = MIT
url = https://github.com/rsocket/rsocket-py
author = Gabriel Shaar
author_email = workofishi@pm.me
long_description = file: README.md
long_description_content_type = text/markdown
description = Python RSocket library
zip_safe = True
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
where = .
include =
    rsocket*
    reactivestreams*

[aliases]
test = pytest

[project_urls]
Documentation = https://rsocket.io/guides/rsocket-py
Changelog = https://github.com/rsocket/rsocket-py/blob/master/CHANGELOG.rst


[options.extras_require]
rx = Rx>=3.0.0
reactivex = reactivex>=4.0.0
aiohttp = aiohttp>=3.0.0
quart = quart>=0.15.0
quic = aioquic>=0.9.0
cli = asyncclick>=8.0.0
optimized = cbitstruct>=1.1.0
fastapi = fastapi>=0.115.0
cloudevents =
    cloudevents>=1.9.0
    pydantic>=1.10.0
graphql =
    graphql-core>=3.2.0
    gql>=3.4.0
websockets = websockets>=11.0.0
channels =
    channels>=4.0.0
    daphne>=4.1.2
asyncwebsockets = asyncwebsockets>=0.9.4

[options.entry_points]
cli.console_scripts =
    rsocket-py = rsocket.cli.command:command

[tool:pytest]
addopts = --verbose
asyncio_mode = auto
timeout = 10

; TODO: Remove ignoring ResourceWarning after finding out why connection is not always closed after each test (rare event)
filterwarnings =
    error
    ignore::DeprecationWarning
    ignore::ResourceWarning
